removed copyOf because of the Java 8 version
Signed-off-by: David Kral <david.k.kral@oracle.com>